<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">
    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/BMI"
            android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/black"
            android:id="@+id/BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Body Mass Index (BMI)"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile"
            app:layout_constraintLeft_toRightOf="@id/calendar"
            app:layout_constraintBottom_toTopOf="@+id/split"
            android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            android:layout_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/BMI"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintBottom_toTopOf="@+id/age">
        <ImageView
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/male"
            app:layout_constraintRight_toLeftOf="@+id/split"
            />
        <ImageView
            android:id="@+id/checkmarkM"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkmark"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/split" />

        <ImageView
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/female"
            />
        <ImageView
            android:id="@+id/checkmarkF"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkmark"
            android:visibility="gone"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/gender">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/age"
            android:id="@+id/ageImage" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageInput" />
        <TextView
            android:textColor="@color/black"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Years"
            android:id="@+id/years" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintBottom_toTopOf="@+id/weight">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/height"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/heightInput"
            />
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/heightUnit"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintBottom_toTopOf="@+id/activity">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/weight"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightInput"
            />
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightUnit"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintBottom_toTopOf="@id/calculate">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Activity Level:"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activityDropdown"/>
    </LinearLayout>
    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="40"
        android:min="15"
        android:progress="15"
        app:layout_constraintBottom_toTopOf="@+id/BMIText"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <LinearLayout
        android:id="@+id/BMIText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/idealWeight"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:textColor="@color/black"
            android:id="@+id/BMIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="BMI: "
            />
        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:id="@+id/BMIStatus"
            android:layout_marginLeft="175dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: "
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/idealWeight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIText"
        app:layout_constraintBottom_toTopOf="@+id/calories">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ideal_weight"/>
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:id="@+id/idealWeightText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idealWeight"
        app:layout_constraintBottom_toTopOf="@+id/add">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/calories"/>
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:id="@+id/recommendedCal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add"
        app:layout_constraintTop_toBottomOf="@id/calories">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diary" />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calories">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/trend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/add"
        app:layout_constraintTop_toBottomOf="@id/calories">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trend" />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trend"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>