...
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Press the logo to start"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
...
