...
        app:layout_constraintBottom_toTopOf="@+id/food"/>
    <ImageView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/foods"
        app:layout_constraintBottom_toTopOf="@id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/start"
...
