...
            android:layout_alignLeft="@id/progress"
            android:layout_alignTop="@id/progress"
            android:layout_alignRight="@id/progress"
            android:layout_alignBottom="@id/progress"/>
        <TextView
            android:textColor="@color/black"
            android:id="@+id/recommendedCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:text="Recommended Calories"
            android:layout_alignLeft="@id/progress"
...
